--- a/frontend/survey/app/index.html
+++ b/frontend/survey/app/index.html
@@ -59,6 +59,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/survey.js"></script>
         <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/services/data.js"></script>
         <!-- endbuild -->
 </body>
 </html>
