--- a/frontend/survey/app/index.html
+++ b/frontend/survey/app/index.html
@@ -19,14 +19,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div ng-include src="'views/_header.html'"></div>
-
-    <div class="container main-wrapper">
     <div ui-view=""></div>
-    </div>
-
-    <div ng-include src="'views/_footer.html'"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -61,7 +54,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/survey.js"></script>
         <script src="scripts/controllers/register.js"></script>
-        <script src="scripts/services/data.js"></script>
+        <script src="scripts/services/user.js"></script>
         <!-- endbuild -->
 </body>
 </html>
